--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,33 +8,33 @@ services:
     depends_on:
       - laravel
       - mailhog
-    working_dir: /var/www/portfolio
+    working_dir: /var/www/portfolio-laravel8
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./docker/nginx/ssl/server.crt:/etc/nginx/ssl/server.crt
       - ./docker/nginx/ssl/server.key:/etc/nginx/ssl/server.key
       - ./docker/nginx/ssl/server.password:/etc/nginx/ssl/server.password
-      - .:/var/www/portfolio:cached
+      - .:/var/www/portfolio-laravel8:cached
     restart: on-failure
 
   laravel:
     build: ./docker/laravel
-    working_dir: /var/www/portfolio
+    working_dir: /var/www/portfolio-laravel8
     ports:
       - "5173:5173"
     volumes:
       - ./docker/laravel/src/php.ini:/usr/local/etc/php/php.ini
       - ./docker/laravel/src/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-      - .:/var/www/portfolio:cached
+      - .:/var/www/portfolio-laravel8:cached
 
   node:
     image: node:20
-    working_dir: /var/www/portfolio
+    working_dir: /var/www/portfolio-laravel8
     ports:
       - "3001:3001"
       - "3002:3002"
     volumes:
-      - .:/var/www/portfolio:cached
+      - .:/var/www/portfolio-laravel8:cached
     command: npm help
 
   redis:
