--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "sass-loader": "^12.6.0",
         "vue": "^3.2.36",
         "vue-loader": "^16.8.3"
+    },
+    "dependencies": {
+        "vue-router": "^4.1.6"
     }
 }
